# Mobilint-NPU

./: PERFORMANCE_REPORT.md  README.md  docker-compose.yml
backend/: backend.Dockerfile  pyproject.toml
backend/src/: models.txt  pipeline_handler.py  server.py  system.txt
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: Answer.tsx  ChatInput.tsx  ContactUsButton.tsx  Dialog.tsx  Greetings.tsx  Main.tsx  MobilintIncPanel.tsx  ModelButton.tsx  ModelGroup.tsx  ModelList.tsx  Sidebar.tsx  type.tsx
